--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.21.0",
+    "axios": "^1.9.0",
     "cloudinary": "^2.6.1",
     "mongoose": "^8.15.1",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "svix": "^1.67.0"
   },
   "devDependencies": {
