--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.21.0",
     "axios": "^1.9.0",
+    "browser-image-compression": "^2.0.2",
     "cloudinary": "^2.6.1",
     "mongoose": "^8.15.1",
     "next": "15.3.3",
